[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "signax"
authors = [
  { name = "Anh Tong", email = "anh.h.tong@gmail.com"},
]
description = "Differentiable signature calculations in JAX."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "typing_extensions >=3.7; python_version<'3.8'",
  "jax>=0.3.10",
  "equinox",
  "jaxlib",
  "jaxtyping"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
  "furo",
]

[project.urls]
Homepage = "https://github.com/Anh-Tong/signax"
"Bug Tracker" = "https://github.com/Anh-Tong/signax/issues"
Discussions = "https://github.com/Anh-Tong/signax/discussions"
Changelog = "https://github.com/Anh-Tong/signax/releases"
[tool.hatch]
version.path = "src/signax/__init__.py"
envs.default.dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["signax"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src"]
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false     # ideally, change me back to true and debug
disallow_incomplete_defs = false  # ideally, change me back to true and debug
disable_error_code = [
    "no-any-return",    # return involving untyped jax functions
    "no-untyped-call",  # e.g. jax.fori_loop
    "misc",             # subclassing untyped equinox module
    "import",           # using equinox (untyped)
]

[[tool.mypy.overrides]]
module = "signax.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "F722",   # Exclude due to jaxtyping
]
target-version = "py38"
typing-modules = ["signax._compat.typing"]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/signax/signatures.py" = ["ARG001", "ARG005"]  # unused arguments
"src/signax/module.py" = ["ARG002"]  # unused argument key in __call__ of Module (equinox)
"examples/nets.py" = ["ARG002"]      # unused argument key in __call__ of Module (equinox)
